2007-03-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mopacformat.cpp: Added patch #1676963
	for MOPAC 2007 output format. Thanks to 'dn2010.'
	(Daniil Bratashov). Solves PR#1654907.

	* src/formats/qchemformat.cpp: Added support for keywords.

	* src/formats/acrformat.cpp: New format, contributed by Daniel
	Mansfield.

	* src/formats/Makefile.am, src/formats/Makefile.in: Add acrformat.

	* src/formats/gaussformat.cpp: Add feature to write bonds,
	contributed by Daniel Mansfield.

	* src/formats/fchkformat.cpp: Add initial support from Maxim
	Fedorovsky. (Maxim's contribution also supported vibrational data
	using Eigen and matrix operations.)

	* include/openbabel/generic.h, src/generic.cpp: Include
	OBVibrationData class (even if the matrix operations to use it
	aren't in Open Babel yet).

	* tools/obprop.cpp: Additional properties, including canonical
	SMILES and InChI. Fixes request PR#1620842.

	* THANKS: Work on updates for 2.1 release.

	* NEWS: Likewise.

2007-03-11 Chris Morley
	
	* src/data/atomtyp.h: Aggressive simplification of 
	IMPVAL for oxygen and new value for Si. Read and test with
	/test/files/FormulaTest.smi. Solves bugs 1635901 and
	1474930
	
	* include/openbabel/forcefield.h: Remove unused 
	#ifndef isnan

2007-03-11 Chris Morley

	* src/formats/inchiformat.cpp: Moved handling of InChI
	options to new subroutine and it added options to 
	ReadMolecule().
	In WriteMolecule() removed deletion of OBChiralData and
	re-zeroed z coords, so that OBMol is unchanged.
	
	* src/GUI/OBGUI.cpp, OBGUI.h; Made default ostream a 
	stringstream which is written to textbox at end. Solves
	bugs 1596906 and (probably) 1669973.
	Added facility for copying output to input.
	
	* src/GUI/optswx.cpp,stdwx.cpp:Leave header files in src/GUI

2007-03-10  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* include/openbabel/psa.h, src/psa.cpp, src/Makefile.am,
	src/Makefile.in, data/psa.txt: Added OBPSA class.

	* tools/obprop.cpp: Added PSA property.